--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 .vscode/arduino.json
 .vscode/c_cpp_properties.json
 Website copy.html
+jQuery.js
+Super_Simple_RGB_WiFi_Lamp/.vscode/arduino.json
+Super_Simple_RGB_WiFi_Lamp/.vscode/c_cpp_properties.json
